Updated: name-based login, image folder restructured, and class cleanup